k8s-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test
  name: test
  namespace:
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: container
        image: bsctl/replyserver:latest
        args:
        - -cert=/opt/certs/testssl.crt
        - -key=/opt/certs/testssl.key
        ports:
        - containerPort: 1968
          name: https
          protocol: TCP
        - containerPort: 1969
          name: http
          protocol: TCP
        - containerPort: 1936
          name: probe
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: probe
            scheme: HTTP
        livenessProbe:
          httpGet:
            path: /
            port: probe
            scheme: HTTP
        volumeMounts:
        - name: server-certs
          mountPath: /opt/certs
          readOnly: true
      volumes:
      - name: server-certs
        secret:
          defaultMode: 420
          secretName: server-certs
---
apiVersion: v1
kind: Service
metadata:
  name: testssl
  namespace:
spec:
  type: ClusterIP
  ports:
  - name: testssl
    port: 443
    protocol: TCP
    targetPort: 1968
  selector:
    app: test
---
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace:
spec:
  type: ClusterIP
  ports:
  - name: test
    port: 80
    protocol: TCP
    targetPort: 1969
  selector:
    app: test
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  namespace:
  labels:
  annotations:
spec:
  rules:
  - host: test.oscp.noverit.com
    http:
      paths:
      - path: /
        backend:
          serviceName: test
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testtls
  namespace:
  labels:
  annotations:
    ingress.kubernetes.io/ssl-passthrough: 'true'
spec:
  rules:
  - host: testtls.oscp.noverit.com
    http:
      paths:
      - path: /
        backend:
          serviceName: testssl
          servicePort: 443
